# AoC-2020

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  newday.sh
data/: day15.txt
include/: boot_code.h
src/: day01_1.cpp  day01_2.cpp  day02_1.cpp  day02_2.cpp  day03_1.cpp  day03_2.cpp  day04_1.cpp  day04_2.cpp  day05_1.cpp  day05_2.cpp  day06_1.cpp  day06_2.cpp  day07_1.cpp  day07_2.cpp  day08_1.cpp  day08_2.cpp  day09_1.cpp  day09_2.cpp  day10_1.cpp  day11_1.cpp  day11_2.cpp  day12_1.cpp  day14_1.cpp  day15_1.cpp
src/day01/: day01_1.cpp  day01_2.cpp
